--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                 <div class="container">
                   <div class="row">
                     <div class="col-6">
-                      <a href="https://renat98.github.io/2021_02_15/task1.xml"
+                      <a href="https://renat98.github.io/portfolio/2021_02_15/task1.xml"
                         >MathML</a
                       ><br />
-                      <a href="https://renat98.github.io/2021_02_15/task2.xml"
+                      <a href="https://renat98.github.io/portfolio/2021_02_15/task2.xml"
                         >Graphics</a
                       >
                     </div>
@@ -105,7 +105,7 @@
                   <div class="row">
                     <div class="col-6">
                       <a
-                        href="https://renat98.github.io/2021_02_22/index.html"
+                        href="https://renat98.github.io/portfolio/2021_02_22/index.html"
                       >
                         Посмотреть на сайте
                       </a>
@@ -137,7 +137,7 @@
                   <div class="row">
                     <div class="col-6">
                       <a
-                        href="https://renat98.github.io/2021_03_03/index.html"
+                        href="https://renat98.github.io/portfolio/2021_03_03/index.html"
                       >
                         Посмотреть на сайте
                       </a>
