--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="col-6">
                       <a
-                        href="https://github.com/renat98/renat98.github.io/tree/main/2021_02_15"
+                        href="https://github.com/Renat98/portfolio/tree/master/2021_02_15"
                       >
                         Исходный код
                       </a>
@@ -112,7 +112,7 @@
                     </div>
                     <div class="col-6">
                       <a
-                        href="https://github.com/renat98/renat98.github.io/tree/main/2021_02_22/chain"
+                        href="https://github.com/Renat98/portfolio/tree/master/2021_02_22"
                       >
                         Исходный код
                       </a>
@@ -145,7 +145,7 @@
                     <div class="col-6">
                       <a
                         href="
-                    https://github.com/renat98/20210303_fetch"
+                    https://github.com/Renat98/portfolio/tree/master/2021_03_03"
                       >
                         Исходный код
                       </a>
